--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.18.2",
+		"express-mongo-sanitize": "^2.2.0",
+		"express-rate-limit": "^7.2.0",
 		"express-validator": "^7.0.1",
+		"hpp": "^0.2.3",
 		"html-to-text": "^9.0.5",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.2.0",
@@ -29,7 +32,8 @@
 		"sharp": "^0.33.2",
 		"slugify": "^1.6.6",
 		"stripe": "^14.20.0",
-		"validator": "^13.11.0"
+		"validator": "^13.11.0",
+		"xss-clean": "^0.1.4"
 	},
 	"devDependencies": {
 		"eslint": "^8.57.0",
